[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "turtle-trading"
version = "0.0.7"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file="LICENSE"}
requires-python = ">=3.8"
description = "A collection of investment tools used by the Turtle Traders."
authors = [{ name="Gabe Kutner", email="gabekutner1@gmail.com" },]
keywords = ["python", "investing", "trading", "turtle-trading", "turtle"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]


[project.urls]
Homepage = "https://github.com/gabekutner/turtle-trading/" 

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.dependencies]
yahoo-fin = "^0.8.9.1"