[build-system]
requires = ["hatchling", "yahoo-fin >= 0.8.9.1", "pandas"]
build-backend = "hatchling.build"


[project]
name = "turtle-trading"
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file="LICENSE"}
requires-python = ">=3.8"
description = "A collection of investment tools used by the Turtle Traders."
authors = [{ name="Gabe Kutner", email="gabekutner1@gmail.com" },]
keywords = ["python", "investing", "trading", "turtle-trading", "turtle"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
  "yahoo-fin >= 0.8.9.1",
  "pandas",
]

[project.urls]
Homepage = "https://github.com/gabekutner/turtle-trading/" 

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["src/tests*"]

[tool.poetry.dependencies]
yahoo-fin = "^0.8.9.1"
pandas = "^2.1.3"

[tool.hatch.version]
path = "src/turtle_trading/__version__.py"